@@ -28,6 +28,8 @@
 #include "DD4hep/LCDD.h"
 #include "DD4hep/Factories.h"
 #include "DD4hep/DD4hepUnits.h" 
+#include "DDRec/DetectorData.h"
+#include "DD4hep/DetType.h"
 
 #include "DDRec/DetectorData.h"
 #include "DDRec/DDGear.h"
@@ -44,9 +46,12 @@ using namespace dd4hep ;
 // protect against rounding errors
 // will not find caps smaller than this
 const float slop = 0.25; // (mm)
-
 //const float pi = acos(-1.0); ///FIXME
 //const float twopi = 2.0*pi;  ///FIXME: DD4HEP INTERFERES WITH THESE
+
+
+//forward declarations. See in DDPandoraPFANewProcessor.cc
+DD4hep::DDRec::LayeredCalorimeterData * getExtension(unsigned int includeFlag, unsigned int excludeFlag=0);
 
 DDCaloDigi aDDCaloDigi ;
 	
@@ -496,10 +501,6 @@ DDCaloDigi::DDCaloDigi() : Processor("DDCaloDigi") {
                              _hcalMaxDynMip,
                              float (200.) );
 
-
-
-
-  
   // end daniel
 
 }
@@ -556,18 +557,11 @@ void DDCaloDigi::init() {
   _strip_virt_cells=-999;
   _countWarnings=0;
 
-  LCDD& lcdd = LCDD::getInstance();
-  
-  // Calorimeter geometry from GEAR
-
-
   try {
     
-    DetElement ecalBarrelDE = lcdd.detector("ECalBarrel");
-    DDRec::LayeredCalorimeterData* ecalBarrelData = ecalBarrelDE.extension<DDRec::LayeredCalorimeterData>() ;
+    DDRec::LayeredCalorimeterData* ecalBarrelData =  getExtension(( DD4hep::DetType::CALORIMETER | DD4hep::DetType::ELECTROMAGNETIC | DD4hep::DetType::BARREL), ( DD4hep::DetType::AUXILIARY  |  DD4hep::DetType::FORWARD ));
     
-    DetElement ecalEndcapDE = lcdd.detector("ECalEndcap");
-    DDRec::LayeredCalorimeterData* ecalEndcapData = ecalEndcapDE.extension<DDRec::LayeredCalorimeterData>() ;
+    DDRec::LayeredCalorimeterData* ecalEndcapData = getExtension(( DD4hep::DetType::CALORIMETER | DD4hep::DetType::ELECTROMAGNETIC | DD4hep::DetType::ENDCAP), ( DD4hep::DetType::AUXILIARY  |  DD4hep::DetType::FORWARD ));
     
     const std::vector<DD4hep::DDRec::LayeredCalorimeterStruct::Layer>& ecalBarrelLayers = ecalBarrelData->layers;
     const std::vector<DD4hep::DDRec::LayeredCalorimeterStruct::Layer>& ecalEndcapLayers = ecalEndcapData->layers;
@@ -609,7 +603,7 @@ void DDCaloDigi::init() {
  
 
   } catch(std::exception &e) {
-    streamlog_out (WARNING) << "WARNING, could not get ECAL gear parameters!" << endl;
+    streamlog_out (ERROR) << "Could not get ECAL parameters from DD4hep!" << endl;
   }
 
 
@@ -653,6 +647,7 @@ void DDCaloDigi::init() {
   _scEcalDigi->setRandomMisCalibNPix(_ecal_misCalibNpix);
   _scEcalDigi->setPixSpread(_ecal_pixSpread);
   _scEcalDigi->setElecNoise(_ecal_elec_noise);
+  _scEcalDigi->setElecRange(_ecalMaxDynMip);
   cout << "ECAL sc digi:" << endl;
   _scEcalDigi->printParameters();
 
@@ -663,6 +658,7 @@ void DDCaloDigi::init() {
   _scHcalDigi->setRandomMisCalibNPix(_hcal_misCalibNpix);
   _scHcalDigi->setPixSpread(_hcal_pixSpread);
   _scHcalDigi->setElecNoise(_hcal_elec_noise);
+  _scHcalDigi->setElecRange(_hcalMaxDynMip);
   cout << "HCAL sc digi:" << endl;
   _scHcalDigi->printParameters();
   
@@ -1281,8 +1277,7 @@ void DDCaloDigi::fillECALGaps( ) {
               // calculate difference in hit postions in z and along stave
               float dx = xi-xj;
               float dy = yi-yj;
-              //float dt = fabs(dx*_barrelStaveDir[is][0] + dy*_barrelStaveDir[is][1]);
-	      float dt = sqrt(dx*dx + dy*dy);
+              float dt = fabs(dx*_barrelStaveDir[is][0] + dy*_barrelStaveDir[is][1]);
               // flags for evidence for gaps
               bool zgap = false;   // in z direction
               bool tgap = false;   // along stave
@@ -1516,9 +1511,10 @@ float DDCaloDigi::ecalEnergyDigi(float energy, int id0, int id1) {
   else if ( _applyEcalDigi==2 ) e_out = scintillatorDigi(energy, true);  // scintillator digi
 
   // add electronics dynamic range
-  if (_ecalMaxDynMip>0) e_out = min (e_out, _ecalMaxDynMip*_calibEcalMip);
-  // random miscalib
+  // Sept 2015: Daniel moved this to the ScintillatorDigi part, so it is applied before unfolding of sipm response
+  // if (_ecalMaxDynMip>0) e_out = min (e_out, _ecalMaxDynMip*_calibEcalMip);
 
+  // random miscalib
   if (_misCalibEcal_uncorrel>0) {
     float miscal(0);
     if ( _misCalibEcal_uncorrel_keep ) {
@@ -1574,7 +1570,8 @@ float DDCaloDigi::ahcalEnergyDigi(float energy, int id0, int id1) {
   if ( _applyHcalDigi==1 ) e_out = scintillatorDigi(energy, false);  // scintillator digi
 
   // add electronics dynamic range
-  if (_hcalMaxDynMip>0) e_out = min (e_out, _hcalMaxDynMip*_calibHcalMip);
+  // Sept 2015: Daniel moved this to the ScintillatorDigi part, so it is applied before unfolding of sipm response
+  //  if (_hcalMaxDynMip>0) e_out = min (e_out, _hcalMaxDynMip*_calibHcalMip);
 
   // random miscalib
   //  if (_misCalibHcal_uncorrel>0) e_out*=CLHEP::RandGauss::shoot( 1.0, _misCalibHcal_uncorrel );
@@ -1630,6 +1627,10 @@ float DDCaloDigi::siliconDigi(float energy) {
 
   // fluctuate it by Poisson
   float smeared_energy = energy*CLHEP::RandPoisson::shoot( nehpairs )/nehpairs;
+
+  // limited electronics dynamic range // Daniel moved electronics dyn range to here
+  if (_ecalMaxDynMip>0)
+    smeared_energy = std::min ( smeared_energy, _ecalMaxDynMip*_calibEcalMip);
 
   // add electronics noise
   if ( _ecal_elec_noise > 0 )
